src/objects/WeS_Tx_Primary_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>WeS Tx Primary Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WeS Tx Primary Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeS Tx Primary Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>